fix(model-improvement): category classes (add validation and not null annotations and also moving from max and min to only age)